# Data_for_ML

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements-annotation.txt  requirements-data-quality.txt  requirements.txt  run_current_pipeline.py  system_visualization.md  task.md  testing_pipeline.py  testing_yandex_parser.py
agents/: __init__.py  al_agent.py  al_tools.py
al_agent/: agent.py  al_tools.py  backend.py  common.py  data.py  evaluate.py  feedback.py  labelstudio.py  selection.py
annotation_agent/: __init__.py  agent.py  config.py  models.py  reporting.py  tools.py
data_quality_tools_agent/: __init__.py  agent.py  reporting.py  tools.py
dataset-agent/: config.py  main.py  requirements.txt
dataset-agent/agents/: __init__.py  image_agent.py  orchestrator.py  parser_agent.py  search_agent.py
dataset-agent/parsers/: __init__.py  yandex_images.py
dataset-agent/tools/: __init__.py  huggingface_tools.py  image_tools.py  kaggle_tools.py  path_utils.py  runtime.py  storage_tools.py  web_tools.py
dataset_agent/: __init__.py  models.py  state.py  tools.py
notebooks/: al_experiment.ipynb
prompts/: system_prompt.txt
