[project]
name = "data-for-ml"
version = "0.1.0"
description = "Multi-source data collection agent for ML dataset discovery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "datasets>=2.21.0",
    "huggingface_hub>=0.30.2",
    "kaggle>=2.0.0",
    "openai>=1.68.2",
    "requests>=2.32.3",
    "sgr-agent-core>=0.6.0",
    "tavily-python>=0.5.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=15.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
